Name:		webcanvas-server
Version:	0.0
Synopsis:	CRUD sample server
Description: 	CRUD sample server
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8

Executable webcanvas-server
  Main-is: webcanvas-server.hs
  hs-source-dirs: exe
  Build-Depends: base == 4.5.*, 
                 yesod == 1.1.*, 
                 uuid == 1.2.*,
                 bytestring == 0.9.*, 
                 containers == 0.4.*, 
                 acid-state == 0.6.*, 
                 webcanvas-type == 0.0.*,
                 webcanvas-server
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind 
  ghc-prof-options: -caf-all -auto-all

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans 
  -- -ddump-splices
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base == 4.5.*, 
                 containers == 0.4.*, 
                 mtl == 2.1.*, 
                 yesod == 1.1.*, 
                 webcanvas-type == 0.0.*, 
                 safecopy == 0.6.*, 
                 acid-state == 0.6.*, 
                 aeson == 0.6.*, 
                 bytestring == 0.9.*, 
                 conduit == 0.5.*, 
                 uuid == 1.2.*,
                 wai-extra == 1.3.*, 
                 wai == 1.3.*,
                 attoparsec == 0.10.*, 
                 text == 0.11.*, 
                 yesod-core == 1.1.*, 
                 yesod-form == 1.1.*, 
                 blaze-html == 0.5.*, 
                 blaze-markup == 0.5.*,
                 http-types == 0.7.*, 
                 uuid == 1.2.*, 
                 old-locale == 1.0.*, 
                 time == 1.4.*, 
                 filepath == 1.3.*
  Exposed-Modules: 
                   Application.WebCanvas.Server.Type
                   Application.WebCanvas.Server.Yesod



		 